Fixed Header Font size on mobile and js links

--- a/updated/dev/sass/style.scss
+++ b/updated/dev/sass/style.scss
@@ -432,6 +432,11 @@ h3 {
     #cards {
         overflow-y: visible;
     }
+
+    .section-title h2 {
+        font-size: 1.8em;
+        margin: 5px auto;
+    }
 }
 
 @media (max-width: 450px) {
